# gmail-whatsapp-summarizer

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  gmail_tools.py  logger.py  main.py  main_gcf.py  pyproject.toml  whatsapp_tools.py
.github/workflows/: ci.yml  schedule_trigger.yml
requirement/: requirements.txt
tests/: test_imports.py
